--- a/src/app/views/connexion/connexion.component.html
+++ b/src/app/views/connexion/connexion.component.html
@@ -6,14 +6,14 @@
         <mat-form-field>
           <mat-label>Email</mat-label>
           <input matInput type="text" formControlName="email" />
-          <mat-error *ngIf="form.get('email')?.errors?.required">
+          <mat-error *ngIf="form.get('email')?.errors?.['required']">
             Veuillez renseigner une adresse email.
           </mat-error>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Mot de passe</mat-label>
           <input matInput type="password" formControlName="password" />
-          <mat-error *ngIf="form.get('password')?.errors?.required">
+          <mat-error *ngIf="form.get('password')?.errors?.['required']">
             Veuillez renseigner un mot de passe.
           </mat-error>
         </mat-form-field>
