--- a/src/app/views/inscription/inscription.component.html
+++ b/src/app/views/inscription/inscription.component.html
@@ -6,21 +6,21 @@
         <mat-form-field>
           <mat-label>Email</mat-label>
           <input matInput type="text" formControlName="email" />
-          <mat-error *ngIf="form.get('email')?.errors?.required">
+          <mat-error *ngIf="form.get('email')?.errors?.['required']">
             Veuillez renseigner une adresse email.
           </mat-error>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Nom</mat-label>
           <input matInput type="text" formControlName="name" />
-          <mat-error *ngIf="form.get('name')?.errors?.required">
+          <mat-error *ngIf="form.get('name')?.errors?.['required']">
             Veuillez renseigner un nom.
           </mat-error>
         </mat-form-field>
         <mat-form-field>
           <mat-label>Mot de passe</mat-label>
           <input matInput type="password" formControlName="password" />
-          <mat-error *ngIf="form.get('password')?.errors?.required">
+          <mat-error *ngIf="form.get('password')?.errors?.['required']">
             Veuillez renseigner un mot de passe.
           </mat-error>
         </mat-form-field>
