--- a/src/app/views/connexion/connexion.component.html
+++ b/src/app/views/connexion/connexion.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <mat-card>
-    <mat-card-title>Connexion</mat-card-title>
+    <mat-card-header>
+      <mat-card-title>Connexion</mat-card-title>
+    </mat-card-header>
     <mat-card-content>
       <form [formGroup]="form" (submit)="submit()">
         <mat-form-field>
